feedback-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedback-api
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 5001
  selector:
    app: feedback-api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: feedback-api
  template:
    metadata:
      labels:
        app: feedback-api
    spec:
      containers:
      - name: feedback-api
        image: maliciusd/feedback-api:submission
        ports:
        - containerPort: 5001
        livenessProbe:
          httpGet:
            path: /admin/feedback
            port: 5001
        volumeMounts:
        - name: sqlite-db
          mountPath: /usr/db
      volumes:
      - name: sqlite-db
        persistentVolumeClaim:
          claimName: sqlite-db-claim
